--- a/web/index/index.html
+++ b/web/index/index.html
@@ -3,10 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="description" content="Web de Angelo, Antonio y Diego" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="favicon.svg" type="image/x-icon" />
+    <title>Nuestra web</title>
   </head>
   <body>
-    <h1>HOME</h1>
+    <h1>
+      <img src="favicon.svg" alt="Logo" width="50" />
+      Nuestra página web
+    </h1>
     <section>
       <nav>
         <ul>
