--- a/web/contacto.html
+++ b/web/contacto.html
@@ -9,21 +9,21 @@
     <title>Nuestra web</title>
   </head>
   <body>
-    <h1>
-      <img src="favicon.svg" alt="Logo" width="50" />
-      Nuestra página web
-    </h1>
-    <section>
+    <header>
+      <h1>
+        <img src="favicon.svg" alt="Logo" width="50" />
+        Nuestra página web
+      </h1>
       <nav>
         <ul>
-          <li><a href="#Home">Home</a></li>
-          <li><a href="#Quienessomos">Quienes Somos</a></li>
-          <li><a href="#Nuestrocv">Nuestros Cv</a></li>
-          <li><a href="#Contacto">Contacto</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="somos.html">Quienes Somos</a></li>
+          <li><a href="cv.html">Nuestros Cv</a></li>
+          <li><a href="#contacto">Contacto</a></li>
         </ul>
       </nav>
-    </section>
+    </header>
 
-    <p>Bienvenido a nuestro challenge en grupos de 3</p>
+    <h2>Contacto</h2>
   </body>
 </html>
