--- a/web/cv.html
+++ b/web/cv.html
@@ -3,11 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Web de Angelo, Antonio y Diego" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="favicon.svg" type="image/x-icon" />
     <link rel="icon" type="image/jpg" href="favicon-web.svg" />
-    <title>Document</title>
+    <title>CV</title>
   </head>
   <body>
-    <h1>Currículum Vitae ANGELO</h1>
+    <header>
+      <h1>
+        <img src="favicon.svg" alt="Logo" width="50" />
+        Nuestra página web
+      </h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="somos.html">Quienes Somos</a></li>
+          <li><a href="cv.html">Nuestros Cv</a></li>
+          <li><a href="#contacto">Contacto</a></li>
+        </ul>
+      </nav>
+    </header>
+    <h2>Currículum Vitae ANGELO</h2>
 
     <div class="section">
       <h2>Datos Personales</h2>
