--- a/web/index.html
+++ b/web/index.html
@@ -11,9 +11,19 @@
   <body>
     <header>
       <h1>
-        <img src="favicon.svg" alt="Logo" />
-        Web de Angelo, Antonio y Diego
+        <img src="favicon.svg" alt="Logo" width="50" />
+        Nuestra página web
       </h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="somos.html">Quienes Somos</a></li>
+          <li><a href="cv.html">Nuestros Cv</a></li>
+          <li><a href="#contacto">Contacto</a></li>
+        </ul>
+      </nav>
     </header>
+
+    <p>Bienvenido a nuestro challenge en grupos de 3</p>
   </body>
 </html>
