--- a/web/index.html
+++ b/web/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Web de Angelo, Antonio y Diego" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="favicon.svg" type="image/x-icon" />
+    <link rel="shortcut icon" href="/favicon.svg" type="image/x-icon" />
     <title>Nuestra web</title>
   </head>
   <body>
     <header>
       <h1>
-        <img src="favicon.svg" alt="Logo" width="50" />
+        <img src="/favicon.svg" alt="Logo" width="50" />
         Nuestra página web
       </h1>
       <nav>
@@ -19,7 +19,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="somos.html">Quienes Somos</a></li>
           <li><a href="cv.html">Nuestros Cv</a></li>
-          <li><a href="#contacto">Contacto</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
         </ul>
       </nav>
     </header>
