Improved html semantics

--- a/web/contacto.html
+++ b/web/contacto.html
@@ -23,24 +23,28 @@
         </ul>
       </nav>
     </header>
-    <h2>Formulario de contacto</h2>
-    <form action="#" method="post">
-      <label for="nombre">Nombre:</label><br />
-      <input type="text" id="nombre" name="nombre" required /><br /><br />
 
-      <label for="email">Email:</label><br />
-      <input type="email" id="email" name="email" required /><br /><br />
+    <main>
+      <section>
+      <h2>Formulario de contacto</h2>
+      <form action="#" method="post">
+        <label for="nombre">Nombre:</label><br />
+        <input type="text" id="nombre" name="nombre" required /><br /><br />
 
-      <label for="comentarios">Comentarios:</label><br />
-      <textarea
-        id="comentarios"
-        name="comentarios"
-        rows="4"
-        cols="50"
-      ></textarea
-      ><br /><br />
+        <label for="email">Email:</label><br />
+        <input type="email" id="email" name="email" required /><br /><br />
 
-      <input type="submit" value="Enviar" />
-    </form>
+        <label for="comentarios">Comentarios:</label><br />
+        <textarea
+          id="comentarios"
+          name="comentarios"
+          rows="4"
+          cols="50"
+        ></textarea
+        ><br /><br />
+        <input type="submit" value="Enviar" />
+      </form>
+    </section>
   </body>
+    </main>
 </html>
