--- a/web/cv.html
+++ b/web/cv.html
@@ -10,10 +10,10 @@
   </head>
   <body>
     <header>
-      <h1>
+      <h2>
         <img src="/favicon.svg" alt="Logo" width="50" />
         Nuestra página web
-      </h1>
+      </h2>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -23,123 +23,138 @@
         </ul>
       </nav>
     </header>
-    <h2>Currículum Vitae ANGELO</h2>
 
-    <div class="section">
-      <h2>Datos Personales</h2>
-      <p><strong>Nombre:</strong> Angelo</p>
-      <p><strong>Fecha de Nacimiento:</strong> 10 de enero de 1990</p>
-      <p><strong>Dirección:</strong> Calle Principal, 123</p>
-      <p><strong>Teléfono:</strong> 123-456-7890</p>
-      <p><strong>Email:</strong> angelo@example.com</p>
-    </div>
+    <main>
+      <article>
+        <header>
+          <h2>Currículum Vitae ANGELO</h2>
+        </header>
 
-    <div class="section">
-      <h2>Educación</h2>
-      <p><strong>Universidad:</strong> ISDI CODERS</p>
-      <p><strong>Título:</strong> Licenciatura en Informática</p>
-      <p><strong>Año de Graduación:</strong> 2024</p>
-    </div>
+        <section>
+          <h2>Datos Personales</h2>
+          <p><strong>Nombre:</strong> Angelo</p>
+          <p><strong>Fecha de Nacimiento:</strong> 10 de enero de 1990</p>
+          <p><strong>Dirección:</strong> Calle Principal, 123</p>
+          <p><strong>Teléfono:</strong> 123-456-7890</p>
+          <p><strong>Email:</strong> angelo@example.com</p>
+        </section>
 
-    <div class="section">
-      <h2>Experiencia Laboral</h2>
-      <p><strong>Puesto:</strong> Desarrollador Web</p>
-      <p><strong>Empresa:</strong> XYZ Tech</p>
-      <p><strong>Periodo:</strong> 2024 - Presente</p>
-      <p>
-        <strong>Descripción:</strong> Desarrollo de aplicaciones web utilizando
-        HTML, CSS, JavaScript, etc.
-      </p>
-    </div>
+        <section>
+          <h2>Educación</h2>
+          <p><strong>Universidad:</strong> ISDI CODERS</p>
+          <p><strong>Título:</strong> Licenciatura en Informática</p>
+          <p><strong>Año de Graduación:</strong> 2024</p>
+        </section>
 
-    <div class="contacto">
-      <h2>Contacto</h2>
-      <p><strong>Teléfono:</strong> 123-456-7890</p>
-      <p><strong>Email:</strong> angelo@example.com</p>
-      <p>
-        <strong>LinkedIn:</strong>
-        <a href="https://www.linkedin.com/in/angelo">angelo</a>
-      </p>
-    </div>
-    <p></p>
-    <p></p>
-    <h1>Currículum Vitae DIEGO</h1>
+        <section>
+          <h2>Experiencia Laboral</h2>
+          <p><strong>Puesto:</strong> Desarrollador Web</p>
+          <p><strong>Empresa:</strong> XYZ Tech</p>
+          <p><strong>Periodo:</strong> 2024 - Presente</p>
+          <p>
+            <strong>Descripción:</strong> Desarrollo de aplicaciones web
+            utilizando HTML, CSS, JavaScript, etc.
+          </p>
+        </section>
 
-    <div class="section">
-      <h2>Datos Personales</h2>
-      <p><strong>Nombre:</strong> Diego</p>
-      <p><strong>Fecha de Nacimiento:</strong> 10 de enero de 1990</p>
-      <p><strong>Dirección:</strong> Calle Principal, 123</p>
-      <p><strong>Teléfono:</strong> 123-456-7890</p>
-      <p><strong>Email:</strong> diego@example.com</p>
-    </div>
+        <section>
+          <h2>Contacto</h2>
+          <p><strong>Teléfono:</strong> 123-456-7890</p>
+          <p><strong>Email:</strong> angelo@example.com</p>
+          <p>
+            <strong>LinkedIn:</strong>
+            <a href="https://www.linkedin.com/in/angelo">angelo</a>
+          </p>
+        </section>
+      </article>
+      <br />
 
-    <div class="section">
-      <h2>Educación</h2>
-      <p><strong>Universidad:</strong> Universidad ABC</p>
-      <p><strong>Título:</strong> Licenciatura en Informática</p>
-      <p><strong>Año de Graduación:</strong> 2024</p>
-    </div>
+      <article>
+        <header>
+          <h2>Currículum Vitae DIEGO</h2>
+        </header>
 
-    <div class="section">
-      <h2>Experiencia Laboral</h2>
-      <p><strong>Puesto:</strong> Desarrollador Web</p>
-      <p><strong>Empresa:</strong> XYZ Tech</p>
-      <p><strong>Periodo:</strong> 2024 - Presente</p>
-      <p>
-        <strong>Descripción:</strong> Desarrollo de aplicaciones web utilizando
-        HTML, CSS, JavaScript, etc.
-      </p>
-    </div>
+        <section>
+          <h2>Datos Personales</h2>
+          <p><strong>Nombre:</strong> Diego</p>
+          <p><strong>Fecha de Nacimiento:</strong> 10 de enero de 1990</p>
+          <p><strong>Dirección:</strong> Calle Principal, 123</p>
+          <p><strong>Teléfono:</strong> 123-456-7890</p>
+          <p><strong>Email:</strong> diego@example.com</p>
+        </section>
 
-    <div class="contacto">
-      <h2>Contacto</h2>
-      <p><strong>Teléfono:</strong> 123-456-7890</p>
-      <p><strong>Email:</strong> diego@example.com</p>
-      <p>
-        <strong>LinkedIn:</strong>
-        <a href="https://www.linkedin.com/in/diego">diego</a>
-      </p>
-    </div>
-    <p></p>
-    <p></p>
-    <h1>Currículum Vitae ANTONIO</h1>
+        <section>
+          <h2>Educación</h2>
+          <p><strong>Universidad:</strong> Universidad ABC</p>
+          <p><strong>Título:</strong> Licenciatura en Informática</p>
+          <p><strong>Año de Graduación:</strong> 2024</p>
+        </section>
 
-    <div class="section">
-      <h2>Datos Personales</h2>
-      <p><strong>Nombre:</strong> Antonio</p>
-      <p><strong>Fecha de Nacimiento:</strong> 10 de enero de 1990</p>
-      <p><strong>Dirección:</strong> Calle Principal, 123</p>
-      <p><strong>Teléfono:</strong> 123-456-7890</p>
-      <p><strong>Email:</strong> antonio@example.com</p>
-    </div>
+        <section>
+          <h2>Experiencia Laboral</h2>
+          <p><strong>Puesto:</strong> Desarrollador Web</p>
+          <p><strong>Empresa:</strong> XYZ Tech</p>
+          <p><strong>Periodo:</strong> 2024 - Presente</p>
+          <p>
+            <strong>Descripción:</strong> Desarrollo de aplicaciones web
+            utilizando HTML, CSS, JavaScript, etc.
+          </p>
+        </section>
 
-    <div class="section">
-      <h2>Educación</h2>
-      <p><strong>Universidad:</strong> Universidad ABC</p>
-      <p><strong>Título:</strong> Licenciatura en Informática</p>
-      <p><strong>Año de Graduación:</strong> 2012</p>
-    </div>
+        <section>
+          <h2>Contacto</h2>
+          <p><strong>Teléfono:</strong> 123-456-7890</p>
+          <p><strong>Email:</strong> diego@example.com</p>
+          <p>
+            <strong>LinkedIn:</strong>
+            <a href="https://www.linkedin.com/in/diego">diego</a>
+          </p>
+        </section>
+      </article>
+      <br />
 
-    <div class="section">
-      <h2>Experiencia Laboral</h2>
-      <p><strong>Puesto:</strong> Desarrollador Web</p>
-      <p><strong>Empresa:</strong> XYZ Tech</p>
-      <p><strong>Periodo:</strong> 2024 - Presente</p>
-      <p>
-        <strong>Descripción:</strong> Desarrollo de aplicaciones web utilizando
-        HTML, CSS, JavaScript, etc.
-      </p>
-    </div>
+      <article>
+        <header>
+          <h2>Currículum Vitae ANTONIO</h2>
+        </header>
 
-    <div class="contacto">
-      <h2>Contacto</h2>
-      <p><strong>Teléfono:</strong> 123-456-7890</p>
-      <p><strong>Email:</strong> antonio@example.com</p>
-      <p>
-        <strong>LinkedIn:</strong>
-        <a href="https://www.linkedin.com/in/antonio">antonio</a>
-      </p>
-    </div>
+        <section>
+          <h2>Datos Personales</h2>
+          <p><strong>Nombre:</strong> Antonio</p>
+          <p><strong>Fecha de Nacimiento:</strong> 10 de enero de 1990</p>
+          <p><strong>Dirección:</strong> Calle Principal, 123</p>
+          <p><strong>Teléfono:</strong> 123-456-7890</p>
+          <p><strong>Email:</strong> antonio@example.com</p>
+        </section>
+
+        <section>
+          <h2>Educación</h2>
+          <p><strong>Universidad:</strong> Universidad ABC</p>
+          <p><strong>Título:</strong> Licenciatura en Informática</p>
+          <p><strong>Año de Graduación:</strong> 2012</p>
+        </section>
+
+        <section>
+          <h2>Experiencia Laboral</h2>
+          <p><strong>Puesto:</strong> Desarrollador Web</p>
+          <p><strong>Empresa:</strong> XYZ Tech</p>
+          <p><strong>Periodo:</strong> 2024 - Presente</p>
+          <p>
+            <strong>Descripción:</strong> Desarrollo de aplicaciones web
+            utilizando HTML, CSS, JavaScript, etc.
+          </p>
+        </section>
+
+        <section>
+          <h2>Contacto</h2>
+          <p><strong>Teléfono:</strong> 123-456-7890</p>
+          <p><strong>Email:</strong> antonio@example.com</p>
+          <p>
+            <strong>LinkedIn:</strong>
+            <a href="https://www.linkedin.com/in/antonio">antonio</a>
+          </p>
+        </section>
+      </article>
+    </main>
   </body>
 </html>
