--- a/web/index.html
+++ b/web/index.html
@@ -23,6 +23,10 @@
         </ul>
       </nav>
     </header>
-    <p>Bienvenido a nuestro challenge en grupos de 3</p>
+
+    <main>
+      <h2>Bienvenido a nuestro challenge en grupos de 3</h2>
+      <p>Somos Angelo, Antonio y Diego</p>
+    </main>
   </body>
 </html>
